--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "tslib": "^2.3.1",
     "typeface-exo": "0.0.22",
     "web-animations-js": "^2.3.2",
+    "webpack": "^5.96.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "@angular/language-service": "14.2.12",
     "@compodoc/compodoc": "^1.1.19",
     "@fortawesome/fontawesome-free": "^5.2.0",
+    "@playwright/test": "^1.48.2",
     "@types/leaflet": "1.2.3",
     "@types/node": "^12.12.70",
     "codelyzer": "^0.0.28",
